force-app/main/default/objects/GetFeedback_Aut__Response__c/fields/CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Score__c</fullName>
    <label>CSAT Score</label>
    <summarizedField>GetFeedback_Aut__Answer__c.GetFeedback_Aut__Number__c</summarizedField>
    <summaryFilterItems>
        <field>GetFeedback_Aut__Answer__c.GetFeedback_Aut__QuestionType__c</field>
        <operation>equals</operation>
        <value>NetPromoter</value>
    </summaryFilterItems>
    <summaryForeignKey>GetFeedback_Aut__Answer__c.GetFeedback_Aut__Response__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>