force-app/main/default/objects/GetFeedback_Aut__Response__c/fields/Detractors__c.field-meta.xml
<CustomField>
    <fullName>Detractors__c</fullName>
    <label>Detractors</label>
    <summaryFilterItems>
        <field>GetFeedback_Aut__Answer__c.GetFeedback_Aut__IsDetractor__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>GetFeedback_Aut__Answer__c.GetFeedback_Aut__Response__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>