force-app/main/default/objects/GetFeedback_Aut__Response__c/fields/GetFeedback_Aut__CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__CompletionDate__c</fullName>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>