force-app/main/default/objects/GetFeedback_Aut__Response__c/fields/GetFeedback_Aut__GetFeedbackId__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__GetFeedbackId__c</fullName>
    <externalId>true</externalId>
    <label>GetFeedback Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>