force-app/main/default/objects/GetFeedback_Aut__Response__c/fields/GetFeedback_Aut__LanguageCode__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__LanguageCode__c</fullName>
    <label>LanguageCode</label>
    <length>12</length>
    <type>Text</type>
</CustomField>