force-app/main/default/objects/GetFeedback_Aut__Response__c/fields/GetFeedback_Aut__Survey__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__Survey__c</fullName>
    <label>Survey</label>
    <referenceTo>GetFeedback_Aut__Survey__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>