force-app/main/default/objects/GetFeedback_Aut__Response__c/fields/GetFeedback_Aut__SurveyId__c.field-meta.xml
<CustomField>
    <fullName>GetFeedback_Aut__SurveyId__c</fullName>
    <formula>GetFeedback_Aut__Survey__r.GetFeedback_Aut__GetFeedbackId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>