force-app/main/default/objects/GetFeedback_Aut__Response__c/fields/Neutral__c.field-meta.xml
<CustomField>
    <fullName>Neutral__c</fullName>
    <label>Neutral</label>
    <summaryFilterItems>
        <field>GetFeedback_Aut__Answer__c.GetFeedback_Aut__IsDetractor__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>GetFeedback_Aut__Answer__c.GetFeedback_Aut__IsPromoter__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>GetFeedback_Aut__Answer__c.GetFeedback_Aut__Number__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>GetFeedback_Aut__Answer__c.GetFeedback_Aut__Response__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>