force-app/main/default/objects/GetFeedback_Aut__Response__c/fields/ProjectId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSA Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>