force-app/main/default/objects/GetFeedback_Aut__Response__c/fields/ProjectLink__c.field-meta.xml
<CustomField>
    <fullName>ProjectLink__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_510, FIND(&apos;/services&apos;,$Api.Partner_Server_URL_510)) &amp;  ProjectId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Link</label>
    <type>Text</type>
</CustomField>