force-app/main/default/objects/GetFeedback_Aut__Response__c/fields/ProjectPM__c.field-meta.xml
<CustomField>
    <fullName>ProjectPM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project PM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Responses (Project PM)</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>